--- a/eventhub/css/style.css
+++ b/eventhub/css/style.css
@@ -1,48 +1,58 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    padding: 0;
-    margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    max-width: 1200px;
+  padding: 0;
+  margin: 0 auto;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  max-width: 1200px;
 }
 
 .title {
-    color: #222;
+  color: #222;
 }
 
 a {
-    text-decoration: none;
-    outline: none;
-    display: block;
-    color: #333;
+  text-decoration: none;
+  outline: none;
+  display: block;
+  color: #333;
 }
 
 .header-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 20px;
-    background: #B9D6F2;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
 }
 
-
 .menu-container {
-    gap: 20px;    
-    display: flex; 
+  gap: 20px;
+  display: flex;
 }
 
 .menu-container a {
-    font-size: 1.125rem;
-    transition: .2s;
-    scale: 1;
-    font-weight: bold;
+  font-size: 1.125rem;
+  transition: 0.2s;
+  scale: 1;
+  font-weight: bold;
 }
 
 .menu-container a:hover {
-    scale: 1.1;
-    color: #006DAA;
+  scale: 1.1;
+  color: #006daa;
 }
 
+.main {
+  padding: 80px 20px;
+  text-align: center;
+}
+
+.main img {
+  width: 180px;
+}
+
+.footer {
+  text-align: center;
+}
